# imageLSB

./: .gitignore  CMakeLists.txt
src/: CImg.h  decodefromimage.cpp  decodefromimage.h  encodetoimage.cpp  encodetoimage.h  main.cpp  openfile.cpp  openfile.h  options.cpp  options.h
